Marquage des exemples

--- a/exemples/index.html
+++ b/exemples/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/lettre.css" />
 </head>
 
-<body>
+<body class="exemple">
     <div class="interface">
         <header>Une lettre personnalisée</header>
         <nav>
