--- a/exemples/compil.html
+++ b/exemples/compil.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
 </head>
 
-<body>
+<body class="exemple">
     <div class="interface">
         <header>Une lettre personnalisée</header>
         <nav>
