--- a/exemples/lettre.html
+++ b/exemples/lettre.html
@@ -7,7 +7,7 @@
     <title>Lettre - Final</title>
 </head>
 
-<body>
+<body class="exemple">
     <div class="interface">
         <header>Une lettre personnalisée</header>
         <nav>
